--- a/back-end/docker/conf/supervisor.conf
+++ b/back-end/docker/conf/supervisor.conf
@@ -1,6 +1,9 @@
+[supervisord]
+nodaemon=true
+
 [program:websockets]
 command=php artisan websockets:serve
-directory=/var/www/websocket-server
+directory=/var/www
 numprocs=1
 autostart=true
 autorestart=true
