--- a/back-end/docker/Dockerfile
+++ b/back-end/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM php:8.1.0-apache
 
-WORKDIR /var/www/websocket-server
+WORKDIR /var/www
 
 #Mod Rewrite
 RUN a2enmod rewrite
@@ -15,12 +15,15 @@ RUN apt-get update -y && apt-get install -y \
     libjpeg-dev \
     libfreetype6-dev \
     libjpeg62-turbo-dev \
-    libpng-dev
+    libpng-dev \
+    supervisor
 
 # Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
-COPY ./websockets.conf /etc/supervisor/conf.d/websockets.conf
+COPY ./conf/supervisor.conf /etc/supervisor/conf.d/supervisor.conf
+
+COPY ./conf/virtualHost.conf /etc/apache2/sites-available/000-default.conf
 
 # PHP Extension
 RUN docker-php-ext-install gettext intl pdo_mysql gd
@@ -29,3 +32,4 @@ RUN docker-php-ext-configure gd --enable-gd --with-freetype --with-jpeg \
     && docker-php-ext-install -j$(nproc) gd
 
 EXPOSE 6001
+
