--- a/back-end/docker/conf/virtualHost.conf
+++ b/back-end/docker/conf/virtualHost.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
     ServerName localhost
-    DocumentRoot /var/www/websocket-server/public
+    DocumentRoot /var/www/public
 
-    <Directory /var/www/websocket-server>
+    <Directory /var/www>
         AllowOverride All
         Require all granted
     </Directory>
