--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.6",
     "remixicon": "^3.5.0",
+    "swiper": "^10.3.1",
     "vee-validate": "^4.11.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
