--- a/front-end/.env
+++ b/front-end/.env
@@ -8,3 +8,4 @@ VITE_BASE_URL=http://back-end.test
 VITE_STORAGE_TOKEN =access_token
 VITE_STORAGE_USER =user
 VITE_STORAGE_SOCKET =socket
+VITE_STORAGE_CHAT =chat
