--- a/front-end/.env
+++ b/front-end/.env
@@ -9,3 +9,9 @@ VITE_STORAGE_TOKEN =access_token
 VITE_STORAGE_USER =user
 VITE_STORAGE_SOCKET =socket
 VITE_STORAGE_CHAT =chat
+
+# Type channel
+VITE_PRIVATE_CHANNEL =private
+VITE_PRESENCE_CHANNEL =presence
+VITE_PUBLIC_CHANNEL =channel
+
