--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,7 +16,6 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.5.0",
-    "bootstrap": "^5.3.2",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.6",
     "remixicon": "^3.5.0",
@@ -30,9 +29,12 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
+    "autoprefixer": "^10.4.16",
     "laravel-echo": "^1.15.3",
+    "postcss": "^8.4.31",
     "pusher-js": "^8.3.0",
     "sass": "^1.67.0",
+    "tailwindcss": "^3.3.5",
     "vite": "^4.4.5"
   }
 }
