--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@headlessui/vue": "^1.7.16",
+    "@heroicons/vue": "^2.0.18",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.5.0",
     "normalize.css": "^8.0.1",
