do future typing

--- a/front-end/.env
+++ b/front-end/.env
@@ -9,6 +9,7 @@ VITE_STORAGE_TOKEN =access_token
 VITE_STORAGE_USER =user
 VITE_STORAGE_SOCKET =socket
 VITE_STORAGE_CHAT =chat
+VITE_STORAGE_SOCKET_ID =x-socket-id
 
 # Type channel
 VITE_PRIVATE_CHANNEL =private
