--- a/front-end/.env
+++ b/front-end/.env
@@ -2,8 +2,8 @@ VITE_PUSHER_APP_CLUSTER=ap1
 VITE_PUSHER_APP_KEY=12042dbf72886d2ed9f7
 VITE_PUSHER_SCHEME=https
 
-# VITE_BASE_URL=https://chatvia-production.up.railway.app
-VITE_BASE_URL=http://back-end.test
+VITE_BASE_URL=https://chatvia-production.up.railway.app
+# VITE_BASE_URL=http://back-end.test
 VITE_STORAGE_TOKEN =access_token
 VITE_STORAGE_USER =user
 VITE_STORAGE_SOCKET =socket
