--- a/front-end/.env
+++ b/front-end/.env
@@ -2,13 +2,14 @@ VITE_PUSHER_APP_CLUSTER=ap1
 VITE_PUSHER_APP_KEY=12042dbf72886d2ed9f7
 VITE_PUSHER_SCHEME=https
 
-VITE_BASE_URL=https://chatvia-production.up.railway.app
-# VITE_BASE_URL=http://back-end.test
+# VITE_BASE_URL=https://chatvia-production.up.railway.app
+VITE_BASE_URL=http://back-end.test
 VITE_STORAGE_TOKEN =access_token
 VITE_STORAGE_USER =user
 VITE_STORAGE_SOCKET =socket
 VITE_STORAGE_CHAT =chat
 VITE_STORAGE_SOCKET_ID =x-socket-id
+VITE_CHAR_LIST = ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z"]
 
 # Type channel
 VITE_PRIVATE_CHANNEL =private
